validation lien privé + inscription via lien privé part I